# actor-finance-monitoring-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.actor/: Dockerfile  actor.json  dataset_schema.json  input_schema.json
.github/workflows/: run_code_checks.yml
docs/: report.md
src/: __main__.py  agents.py  graph.py  llm.py  main.py  models.py  ppe_utils.py  state.py  tools.py  utils.py
tests/: test_graph.py
